# Search-Ranking-Model

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
data/: grouping.py  load_documents.py  load_istella.py
data/experiments/: test_loader.py
data/raw/: documents.csv
evaluation/: evaluate_model.py  metrics.py
experiments/: test_loader.py
features/: build_features.py  generate_training_data.py
models/: ltr_model.txt  train_ltr.py
pipelines/: inference_pipeline.py  search_pipeline.py
retrieval/: bm25_search.py  hybrid_search.py  semantic_search.py
